--- a/webpages/index.html
+++ b/webpages/index.html
@@ -490,11 +490,11 @@
                 <h2 class="text-uppercase">Virtual Landscape</h2>
                 <p class="item-intro text-muted">The foundation of virtual meditation.</p>
                 <img class="img-fluid d-block mx-auto" src="img/naturalLand.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <p>Using the concept of stress alleviation, many people utilize farmost advanced technological devices to recreate the perception of nature.</p>
                 <ul class="list-inline">
-                  <li>Date: January 2019</li>
-                  <li>Client: Threads</li>
-                  <li>Category: Illustration</li>
+                  <li>Date: April 08, 2019</li>
+                  <li>Medium: Digital (Unity)</li>
+                  <li>Size: </li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
@@ -521,14 +521,14 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Project Name</h2>
-                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                <h2 class="text-uppercase">Artifacts</h2>
+                <p class="item-intro text-muted">The critical importance and beauty of artifacts.</p>
                 <img class="img-fluid d-block mx-auto" src="img/desktop.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <p>Artifacts is another way of speaking about identity, through cultural values, the way we portray our cultural aspects from art is through essential belongings.</p>
                 <ul class="list-inline">
-                  <li>Date: January 2017</li>
-                  <li>Client: Explore</li>
-                  <li>Category: Graphic Design</li>
+                  <li>Date: March 28, 2019</li>
+                  <li>Medium: Digial (Vuforia)</li>
+                  <li>Size:</li>
                 </ul>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
