--- a/webpages/index.html
+++ b/webpages/index.html
@@ -303,9 +303,9 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-            <h4>Larry Parker</h4>
-            <p class="text-muted">Lead Marketer</p>
+            <img class="mx-auto rounded-circle" src="img/wall.jpeg.jpg" alt="">
+            <h4></h4>
+            <p class="text-muted"></p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="#">
