--- a/webpages/index.html
+++ b/webpages/index.html
@@ -303,7 +303,7 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/wall.jpeg.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="img/wall.jpg" alt="">
             <h4></h4>
             <p class="text-muted"></p>
             <ul class="list-inline social-buttons">
