--- a/webpages/index.html
+++ b/webpages/index.html
@@ -327,9 +327,9 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
-            <h4>Diana Pertersen</h4>
-            <p class="text-muted">Lead Developer</p>
+            <img class="mx-auto rounded-circle" src="urban.JPG" alt="">
+            <h4></h4>
+            <p class="text-muted"></p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="#">
