--- a/webpages/index.html
+++ b/webpages/index.html
@@ -272,7 +272,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">More Images</h2>
+          <h2 class="section-heading text-uppercase">More Images(for fun)</h2>
           <h3 class="section-subheading text-muted"></h3>
         </div>
       </div>
