--- a/webpages/index.html
+++ b/webpages/index.html
@@ -192,7 +192,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Bio</h2>
-          Michael Yue, a San Francisco Bay Area artist was born in 1992. He enrolled in San Jose State University in 2011 to pursue is undergraduate degree. Started out with computer science major, learning basci coding skills and programming languages such as Java, Javascript, C, C#, and C++, but midddle of his academic year, he switched to digital media arts. His genuine passion for digital art is mainly focused on virtual and augmented reality as well as code and net art; his inspiration drawn from mathematics and coding skills, also in exploration in entertainment fields such as gaming. His work drawn from the concept of modernization of Silicon Valley with virtual community.
+          Michael Yue, a San Francisco Bay Area artist was born in 1992. He enrolled in San Jose State University in 2011 to pursue is undergraduate degree. Started out with computer science major, learning basic coding skills and programming languages such as Java, Javascript, C, C#, and C++, but midddle of his academic year, he switched to digital media arts. His genuine passion for digital art is mainly focused on virtual and augmented reality as well as code and net art; his inspiration drawn from mathematics and coding skills, also in exploration in entertainment fields such as gaming. His work drawn from the concept of modernization of Silicon Valley with virtual community.
 
 
 
