--- a/webpages/index.html
+++ b/webpages/index.html
@@ -629,8 +629,8 @@
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">Project Name</h2>
                 <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                <img class="img-fluid d-block mx-auto" src="img/nature.jpg" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <img class="img-fluid d-block mx-auto" src="img/scape.jpg" alt="">
+                <p>Gazebo and lake</p>
                 <ul class="list-inline">
                   <li>Date: January 2017</li>
                   <li>Client: Southwest</li>
@@ -663,7 +663,7 @@
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">Landscape</h2>
                 <p class="item-intro text-muted">General overview of the landscape.</p>
-                <img class="img-fluid d-block mx-auto" src="img/views.jpg" alt="">
+                <img class="img-fluid d-block mx-auto" src="img/cliffs.jpg" alt="">
                 <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                 <ul class="list-inline">
                   <li>Date: January 2017</li>
