--- a/webpages/index.html
+++ b/webpages/index.html
@@ -231,14 +231,14 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">More Images(for fun)</h2>
+          <h2 class="section-heading text-uppercase"></h2>
           <h3 class="section-subheading text-muted"></h3>
         </div>
       </div>
       <div class="row">
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/museum.JPG" alt="">
+            <img class="mx-auto rounded-circle" src="#" alt="">
             <h4></h4>
             <p class="text-muted"></p>
             <ul class="list-inline social-buttons">
@@ -262,7 +262,7 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/wall.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="#contacts" alt="">
             <h4></h4>
             <p class="text-muted"></p>
             <ul class="list-inline social-buttons">
