--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -44,7 +44,7 @@ http://www.tooplate.com/view/2086-multi-color
                 <nav class="navbar">
                     <div class="tm-navbar-bg">
                         
-                        <a class="navbar-brand text-uppercase" href="../webpages/index.html"><i class="fa fa-gears tm-brand-icon"></i>Portfolio Images</a>
+                        <a class="navbar-brand text-uppercase" href="../webpages/index.html"><!-- <i class="fa fa-gears tm-brand-icon"> --></i>Portfolio Images</a>
 
                         <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#tmNavbar">
                             &#9776;
@@ -52,7 +52,7 @@ http://www.tooplate.com/view/2086-multi-color
                         <div class="collapse navbar-toggleable-md text-xs-center text-uppercase tm-navbar" id="tmNavbar">
                             <ul class="nav navbar-nav">
                                 <li class="nav-item active selected">
-                                    <a class="nav-link" href="../webpages/index.html" data-no="1">Homepage <span class="sr-only">(current)</span></a>
+                                    <!-- <a class="nav-link" href="#" data-no="1">Homepage <span class="sr-only">(current)</span></a> -->
                                 </li>                                
                                 <li class="nav-item">
                                     <a class="nav-link" href="#0" data-no="2"></a>
