--- a/portfolioSite/index.html
+++ b/portfolioSite/index.html
@@ -94,10 +94,16 @@
       </div>
 
       <div class="item">
-        <img src="img_flower2.jpg" alt="Flower" width="460" height="345">
+        <img src="videoShot.jpg" alt="Flower" width="460" height="345">
         <div class="carousel-caption">
           <h3>Flowers</h3>
-          <p>Beautiful flowers in Kolymbari, Crete.</p>
+          <div class="item">
+        <img src="videoShot.jpg" alt="Flower" width="460" height="345">
+        <div class="carousel-caption">
+          <h3>Flowers</h3>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/cftIpN-D9_k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div>
         </div>
       </div>
   
