--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -119,11 +119,11 @@ http://www.tooplate.com/view/2086-multi-color
                                     </div>
                                     <div class="grid-item">
                                         <figure class="effect-bubba">
-                                            <img src="img/tm-img-04-tn.jpg" alt="Image" class="img-fluid tm-img">
+                                            <img src="img/overview.jpg" alt="Image" class="img-fluid tm-img">
                                             <figcaption>
                                                 <h2 class="tm-figure-title">Image <span>Four</span></h2>
                                                 <p class="tm-figure-description">Meditational virtual landscape.</p>
-                                                <a href="img/tm-img-04.jpg">View more</a>
+                                                <a href="overview.jpg">View more</a>
                                             </figcaption>           
                                         </figure>
                                     </div>  
