--- a/imageSlide/index.html
+++ b/imageSlide/index.html
@@ -55,16 +55,16 @@ http://www.tooplate.com/view/2086-multi-color
                                     <!-- <a class="nav-link" href="#" data-no="1">Homepage <span class="sr-only">(current)</span></a> -->
                                 </li>                                
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#0" data-no="2"></a>
+                                    <a class="nav-link" href="#0" data-no="2">Page 2</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#0" data-no="3"></a>
+                                    <a class="nav-link" href="#0" data-no="3">Page 3</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#0" data-no="4"></a>
+                                    <a class="nav-link" href="#0" data-no="4">Page 4</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#0" data-no="5"></a>
+                                    <a class="nav-link" href="#0" data-no="5">Page 5</a>
                                 </li>
                             </ul>
                         </div>                        
